# cricket-playbook

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  Dockerfile  KANBAN.md  ONBOARDING.md  README.md  aliases.sh  chat  docker-compose.yml  pyproject.toml  requirements.txt
.data/: ipl_2026_squad_experience.csv  manifest.json  player_tags.json  schema.md
.editorial/: brad_stevens_agent_review.md  cluster_archetypes_creative.md  flower_review_v2.1.md  flower_tactical_review.md  performance_report.md  pre_tournament_notes_enriched.md  retro_001_sprint4_mid.md  rework_plan_v2.1.md  skills_radar.md  social_units.md  sprint_review_2026-01-20.md  x_posts_final.md
.mission-control/: README.md
.ml_ops/: model_registry.json
Founder Review/: Response_to_Review_1.md
analysis/: README.md  baselines_vs_tags.md  entry_point_audit_report.md  player_id_audit_report.md  threshold_eda_2023.md
archive/: README.md
config/: CONSTITUTION.md  README.md  content_language_guide.md  thresholds.yaml
cricket_playbook_setup/: README.md
data/: PROVENANCE.md  README.md  bowler_classifications_v3.csv  ipl_2026_player_contracts.csv  ipl_2026_squad_experience.csv  ipl_2026_squads.csv
docs/: AGENT_PLAYBOOK.md  DATA_DICTIONARY.md  HOW_IT_WORKS.md  INDEX.md  KANBAN.md  MEGA_REVIEW_1_ACTION_PLAN.md  PRD_CRICKET_PLAYBOOK.md  PRODUCT_POSITIONING.md  PROGRESS_DEFINITIONS.md  README.md  REVIEW_5_ACTION_PLAN.md  SPRINT_4_PLAN.md  STATE_CONVENTIONS.md  SUPER_SELECTOR.md  TICKET_CONTEXT_TEMPLATE.md  cicd_best_practices.md  claude_code_model_switching.md  optimization_audit_report.md  script_validation_schema.md  tkt_096_optimization_summary.md  validation_run_report.md
editorial/: andy_flower_analytics_research.md  rework_plan_v2.1.md
founder_review/: response_2.md
governance/: EDITORIAL_ANALYTICS_BOUNDARY.md  MISSION_CONTROL_DESIGN_020426_v1.md  README.md  TASK_INTEGRITY_LOOP.md  florentino_kill_list.md
ml_ops/: README.md  deployment_manifest.md  model_registry.json
models/: win_prob_innings1_v1.lgbm  win_prob_innings1_v1_calibrated.joblib  win_prob_innings2_v1.lgbm  win_prob_innings2_v1_calibrated.joblib
notebooks/: README.md  explore.ipynb  view_explorer.ipynb
outputs/: README.md  batter_bowling_type_detail.csv  batter_bowling_type_detail_2023.csv  (+30 more)
(+947 files in other folders)
