[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricket-playbook"
version = "4.0.0"
description = "IPL 2026 Analytics Platform"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as an integration test (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
